# OpenPRS

./: .gitignore  BUGS  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.dev  Makefile.in  NEWS  Ope.adlang  README  TODO  ac_find_motif.m4  ac_laas_mkdep.m4  ac_readline.m4  acinclude.m4  aclocal.m4  action.c  action_f-pub.h  activate.c  activate.h  bootstrap.sh  conditions.c  conditions.h  config-ac.h.in  config.h.in  configure  configure.ac  constant-pub.h  constant.h  consult-rop.c  database.c  default-user-external.c  default-user-external.h  default-user-external_f.h  ev-function.c  ev-function_f-pub.h  ev-predicate.c  ev-predicate.h  ev-predicate_f-pub.h  (+211 more)
c_toolkit/: ChangeLog  Makefile  Makefile.am  Makefile.in  hashPack.h  listPack.h  mallocPack.c  mallocPack_f.h  shashPack-pub.h  shashPack.c  shashPack.h  shashPackTest.c  shashPack_f.h  slistPack-pub.h  slistPack.c  slistPack.h  slistPackTest.c  slistPack_f.h
config/: i386-linux.h  i386-linux.make  powerpc-darwin.h  powerpc-darwin.make  sparc-solaris.h  sparc-solaris.make
contrib/: Makefile  Makefile.am  Makefile.in
contrib/examples/extending_oprs_kernel/: Makefile.am  README  configure.ac  myoprs.pc.in
contrib/examples/extending_oprs_kernel/data/: Makefile.am  myoprs.db  myoprs.inc.input  myoprs.opf  myoprs.sym
contrib/examples/extending_oprs_kernel/src/: Makefile.am  action.c  action_f.h  evaluable-function.c  evaluable-function_f.h  evaluable-predicate.c  evaluable-predicate_f.h  myoprs.c
contrib/src/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  openprs-util.pc.in  pu-enum.c  pu-enum.h  pu-enum_f.h  pu-genom.c  pu-genom_f.h  pu-mk-term.c  pu-mk-term_f.h  pu-parse-tl.c  pu-parse-tl_f.h  timer_create.c
data/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  bar.inc  bar.opf  block-world-processes.opf  boo.inc  boo.opf  com.opf  common-meta-processes.opf  common-meta-processes.sym  conway.opf  database-cwp.inc  database-ep.inc  database-ff.inc  example-cons.opf  example-list.inc  example-list.opf  fact-meta-if-par.inc  fact-meta-if-par.opf  fact-meta-if.inc  fact-meta-if.opf  fact-meta.inc  fact-meta.opf  fact-text.inc  fact-text.opf  fact.inc  fact.opf  fib-par.inc  fib-par.opf  fib-text.opf  fib.inc  fib.opf  foo.inc  foo.opf  frogger-proc.opf  include.db  include.inc  (+26 more)
data/test/: Makefile.am  all.inc  all.opf  append.opf  array.inc  array.opf  bind.db  bind.inc  bind.opf  boundp.inc  boundp.opf  car-cdr.inc  car-cdr.opf  command.opf  cons-term.inc  cons-term.opf  copy-env.inc  copy-env.opf  critical.inc  critical.opf  current.inc  current.opf  database.db  database.inc  del-ll.inc  del-ll.opf  effects.opf  empty.inc  empty.opf  error.opf  fail.opf  failed.inc  ff-val.inc  ff-val.opf  foo.opf  goal-intend.opf  goal-old.opf  goal.inc  goal.opf  intention.inc  (+33 more)
demo/: Makefile  Makefile.am
demo/truck-demo/oprs/: ChangeLog  Makefile  Makefile.am  user-action.c  user-evaluable-function.c  user-evaluable-predicate.c  user-external.c  user-external.h  user-external_f.h  user-trace.c
demo/truck-demo/oprs/data/: Makefile.am  meta-processes.opf  truck-demo-fr.db  truck-demo-fr.inc  truck-demo-fr.opf  truck-demo-fr.sym  truck-demo-plus.opf  truck-demo.db  truck-demo.inc  truck-demo.inc.input  truck-demo.opf  truck-demo.sym  truck-simu.db  truck-simu.inc  truck-simu.opf  truck-simu.sym
demo/truck-demo/src/: ChangeLog  Makefile  Makefile.am  Truck-demo.adlang  bitmaps.h  clock-bboard.c  cmd-bboard.c  cont-bboard.c  demo-time.c  demo-time.h  demo.h  demo_f.h  error-bboard.c  fill-bboard.c  filling.c  interface.h  local-time_f.h  message.c  message.h  oprs-interface.c  td-icon.bit  text-windows.c  time.c  truck-demo.c  util.c  valve.c
demo/truck-demo/src/bitmaps/: armed-stop.bm  bp.bm  canvas100.bm  disarm-stop.bm  filled-tank0.bm  filled-tank1.bm  filled-tank10.bm  filled-tank2.bm  filled-tank3.bm  filled-tank4.bm  filled-tank5.bm  filled-tank6.bm  filled-tank7.bm  filled-tank8.bm  filled-tank9.bm  filling-no-truck.bm  leaving-truck-filled.bm  leaving-truck.bm  light-off.bm  light-on.bm  light.bm  ready-truck-filled.bm  ready-truck.bm  tank0.bm  tank1.bm  tank10.bm  tank2.bm  tank3.bm  tank4.bm  tank5.bm  tank6.bm  tank7.bm  tank8.bm  tank9.bm  truck-filled.bm  truck.bm  valve-open.bm  valve.bm
doc/: ChangeLog  Makefile  Makefile.am  Makefile.dev  Makefile.in  Makefile.src  appendices.tex  biblio.tex  copyright.tex  find_url_in_doc.pl  license.tex  mkgif  mp.tex  opc.tex  ope.tex  oprs-kernel.tex  oprs-lex.tex  oprs-macros.tex  oprs-macros.tex.in  oprs-server.tex  oprs-yacc.tex  oprs.bbl  oprs.bib  oprs.tex  overview.tex  using-oprs.tex  xoprs-kernel.tex
doc/fig/: action-op.ps  global-arch.ps  intention-graph.ps  load-op.ps  move-valve-op-exp.ps  move-valve-op-new.ps  move-valve-op.ps  multi-special-action-op.ps  op-fib-par.ps  op-fib-text.ps  op-fib.ps  op-ite-fact-if-then-else.ps  op-ite-fact.ps  op-meta-fact-text.ps  ope-cre-edge.ps  ope-cre-op-act.ps  ope-cre-op-gra.ps  ope-cre-op-txt.ps  ope-draw-size.ps  ope-edit-menu.ps  ope-edit-obj.ps  ope-file-menu.ps  ope-help-menu.ps  ope-help-pan.ps  ope-menu-bar.ps  ope-misc-menu.ps  ope-mode-menu.ps  ope-op-act.ps  ope-op-gra.ps  ope-op-menu.ps  ope-op-txt.ps  ope-sel-pan.ps  ope-window.ps  ope-work-menu.ps  oprsaae.ps  oprsde.ps  oprsgae.ps  par-surv.ps  rec-fact-ite.ps  rec-fact.ps  (+36 more)
m4/: ac_find_motif.m4  ac_readline.m4
src/: ChangeLog  LICENSE.c  Makefile.am  Ope.adlang  XOprs.adlang  action.c  action.h  action_f-pub.h  action_f.h  activate.c  activate.h  activate_f.h  bug.c  conditions.c  conditions.h  conditions_f.h  config.h.in  constant-pub.h  constant.h  consult-rop.c  database.c  database.h  database_f.h  default-hook.c  default-hook.h  default-hook_f.h  default-user-external.c  default-user-external.h  default-user-external_f.h  ev-function.c  ev-function.h  ev-function_f-pub.h  ev-function_f.h  ev-predicate.c  ev-predicate.h  ev-predicate_f-pub.h  ev-predicate_f.h  fact-goal.c  fact-goal.h  fact-goal_f-pub.h  (+304 more)
util/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  ad2c  adlang2ad  init-oprs-env  install-if-change.sh  (+3 more)
(+65 files in other folders)
